-
Bug
-
Resolution: Fixed
-
Medium
-
Lustre 2.17.0
-
3
-
9223372036854775807
Looks like test 5h and test 26 in conf-sanity that use failloc 0x135 are hitting this warning:
[ 2152.758458] LustreError: MGC192.168.206.124@tcp: Connection to MGS (at 0@lo) was lost; in progress operations using this service will fail [ 2152.884525] Lustre: *** cfs_fail_loc=135, val=0*** [ 2152.921897] Lustre: lustre-MDT0000: Not available for connect from 192.168.206.24@tcp (not set up) [ 2152.986314] BUG: spinlock bad magic on CPU#0, llog_process_th/67005 [ 2152.992460] lock: 0xffff99fe36363cc0, .magic: 00000000, .owner: <none>/-1, .owner_cpu: 0 [ 2153.000238] CPU: 0 PID: 67005 Comm: llog_process_th Kdump: loaded Tainted: G O -------- - - 4.18.0rh8.10-debug #10 [ 2153.010663] Hardware name: QEMU Standard PC (i440FX + PIIX, 1996), BIOS 1.16.3-1.fc39 04/01/2014 [ 2153.016673] Call Trace: [ 2153.020345] ? dump_stack+0xbb/0x10e [ 2153.021793] ? spin_dump.cold.3+0x32/0x65 [ 2153.028771] ? do_raw_spin_lock+0xce/0x190 [ 2153.030896] ? _raw_spin_lock+0x21/0x30 [ 2153.032744] ? mdd_changelog_fini+0x45/0x3a0 [mdd] [ 2153.034557] ? mdd_process_config+0x368/0x930 [mdd] [ 2153.036601] ? mdt_stack_fini+0x5de/0xe50 [mdt] [ 2153.038559] ? mdt_init0+0x6c0/0x18f0 [mdt] [ 2153.040050] ? _raw_spin_unlock+0x12/0x30 [ 2153.042525] ? mdt_device_alloc+0x118/0x170 [mdt] [ 2153.047914] ? obd_setup+0x2e6/0x700 [obdclass] [ 2153.049672] ? class_setup+0x6f5/0x9f0 [obdclass] [ 2153.052082] ? class_process_config+0x1658/0x2b60 [obdclass] [ 2153.057151] ? class_config_llog_handler+0x8ac/0x1af0 [obdclass] [ 2153.060500] ? __kmalloc+0x1b4/0x4a0 [ 2153.062561] ? class_config_llog_handler+0xc51/0x1af0 [obdclass] [ 2153.065202] ? llog_process_thread+0x13be/0x2220 [obdclass] [ 2153.067605] ? llog_process+0x40/0x40 [obdclass] [ 2153.069456] ? llog_process_thread_daemonize+0xa2/0xe0 [obdclass] [ 2153.072078] ? kthread+0x1d1/0x200 [ 2153.072959] ? set_kthread_struct+0x70/0x70 [ 2153.075795] ? ret_from_fork+0x1f/0x30
- is related to
-
LU-16807 Resolve newer debug kernel warnings
-
- Resolved
-