LU-19168 mdd: fix spinlock bad magic during OBD_FAIL_MDS_FS_SETUP

Tests 5h and 26 in conf-sanity.sh that use fail_loc 0x135
(OBD_FAIL_MDS_FS_SETUP) were hitting "spinlock bad magic" errors
during cleanup.

The issue occurs when the failure injection triggers during MDT
initialization in mdt_init0() before mdd_changelog_init() is called.
During error cleanup, mdt_stack_fini() calls mdd_changelog_fini()
which tries to access uninitialized spinlocks (mc_lock and
mc_user_lock), causing the kernel to detect corrupted spinlock
magic numbers.

Fix by moving the spinlock initialization from mdd_changelog_init()
to mdd_init0(), ensuring the spinlocks are always initialized early
in the MDD device setup process, even if mdd_changelog_init() is
never called due to early failures.

The execution order is:
1. mdt_init0() -> mdt_stack_init() -> mdd_device_alloc() -> mdd_init0()
   (spinlocks now initialized here)
2. OBD_FAIL_MDS_FS_SETUP failure injection triggers
3. mdt_stack_fini() -> mdd_changelog_fini() (spinlocks safe to use)

Test-Parameters: trivial testlist=conf-sanity env=ONLY="5h 26"

Signed-off-by: Chakshu Kansal <ckansal@ddn.com>
Change-Id: I2e7a2a1a8657d067eb2870ba06ca14cd1eb8d950
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/60221
Tested-by: Maloo <maloo@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Oleg Drokin <green@whamcloud.com>